Unreleased

* Model animation/movement interpolation (r_lerpmodels, r_lerpmove cvars)
* SDL video/input/sound target, now default for MacOS instead of X11.
* sndio sound target for OpenBSD (thanks Tony Spets/Jacob Meuser)
* Support for BJP1/2/3 and FITZ(666) network/demo protocols
* Support for RMQ style BSP2 file format
* Work around buggy timers on some windows systems/drivers (thanks MH!)
* Removed vid_win dependency on SciTech MGL (thanks MH!)
* Netmasks can be used with qwsv's addip/removeip; e.g. "addip 192.168.0.0/24"
* Fixed remote screenshots from QWSV
* Improved build system including new OSX, Win64, SDL targets
* Lots more code sharing between NQ/QW

2009-07-05 TyrQuake v0.61

* Changelogs for v0.61 and earlier available via git.
   -> git://disenchant.net/tyrquake