@@ -22,6 +22,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <assert.h>
 #include <stdint.h>
 
+#include "qtypes.h"
 #include "textures.h"
 #include "vid.h"
 #include "zone.h"
