@@ -11,6 +11,7 @@ Unreleased
 * Fixed remote screenshots from QWSV
 * Improved build system including new OSX, Win64, SDL targets
 * Lots more code sharing between NQ/QW
+* Use non-power-of-two OpenGL textures when extension is available
 
 2009-07-05 TyrQuake v0.61
 
